node-red/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodered
  namespace: nodered
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodered
  template:
    metadata:
      labels:
        app: nodered
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - name: nodered
          image: nodered/node-red:latest
          ports:
            - containerPort: 1880
          volumeMounts:
            - name: nodered-data
              mountPath: /data
      volumes:
        - name: nodered-data
          persistentVolumeClaim:
            claimName: nodered-pv-claim
