node-red/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodered
  namespace: nodered
spec:
  selector:
    app: nodered
  ports:
    - protocol: TCP
      port: 1880
      targetPort: 1880
